tests/samples/negative/modules/module_name_mismatch.ax
module module_name_mismatch;

import bad.name;

fn main() -> i32 {
    return nope();
}
